# RMPC-project-KUKA-youBot

./: .gitignore  CHANGES_fixes.md  QUICKSTART_color_pick_place.md
config/: README.md  youbot-base.cfg  youbot-ethercat.cfg  youbot-manipulator.cfg
docs/: ETHERCAT_TROUBLESHOOTING.md  METHODICHKA.md  PROJECT_STRUCTURE.md
src/youbot_controller/: CMakeLists.txt  package.xml
src/youbot_controller/config/: arm_controller.yaml  gripper_controller.yaml  mission_view.rviz
src/youbot_controller/launch/: arm_controller.launch  gazebo_youbot.launch  gripper_controller.launch  room_generator.launch  rviz.launch  youbot_controller.launch  youbot_controller_core.launch  youbot_my_sim.launch  youbot_sim.launch
src/youbot_controller/scripts/: controller.py  mission_config.py  room_generator.py  rrt_planner.py  trajectory_planner.py  visualization_node.py  youbot_controller.py
src/youbot_driver/: .gitignore
src/youbot_driver/src/soem/: ethercatmain.c
src/youbot_mecanum_controller/: CMakeLists.txt  package.xml
src/youbot_mecanum_controller/config/: gazebo_pid_gains.yaml  velocity_controllers.yaml
src/youbot_mecanum_controller/launch/: mecanum_controller.launch
src/youbot_mecanum_controller/scripts/: mecanum_controller.py
src/youbot_perception/: CMakeLists.txt  README.md  package.xml
src/youbot_perception/config/: mission_params.yaml
src/youbot_perception/launch/: pick_place_real.launch  pick_place_sim.launch
src/youbot_perception/scripts/: cube_detector.py  fix_permissions.sh  hsv_probe.py  pick_place_mission.py  spawn_task_objects.py
src/youbot_perception/urdf/: youbot_task.urdf.xacro
src/youbot_simulation/youbot_gazebo_control/: CMakeLists.txt  CMakeLists.txt.save
(+7 files in other folders)
